# live-py-plugin

./: .dockerignore  .gitignore  .project  .pydevproject  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  Main.sublime-menu  PythonLiveCoding.sublime-settings  README.md  SECURITY.md  build.properties  contributing-browser-full.md  contributing-browser-tutorial.md  contributing-emacs.md  contributing-pycharm.md  contributing-space-tracer.md  contributing-sublime.md  contributing-vscode.md  getting_started.md  gettingstarted.md  howitworks.md  index.html  index.md  license.html  license.txt  manifest.json  params.json  plugin.xml  pyproject.toml  pytest.ini  pythonLiveCoding.py  record.sh  setup.py  space_tracer.md  tox.ini
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer-prebuild/: README.md
.github/: dependabot.yml
PySrc/: code_tracer.py  code_tracer_old.py  fix_missing_locations_bug.py  parse_test_visitor.py  report_builder.py
_layouts/: default.html
docs/: Gemfile  _config.yml  gettingstarted.md  howitworks.md  index.md  space_tracer.md  starting_emacs.md  starting_pycharm.md  starting_space_tracer.md  starting_sublime_text.md  starting_vscode.md
eclipse-old/: .pydevproject  README.md  build.properties
emacs-live-py-mode/: live-py-mode.el  live-py-test.el
feature/: .project  feature.xml
html/: README.md  collect_tutorials.js  deploy.js  deployed-python.txt  meta.yaml  package-lock.json  package.json  serve.sh
plugin/: .classpath  README.md  build.properties  (+2 more)
(+511 files in other folders)
